# clog

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.js  lib.rs
clog_derive/: Cargo.toml
clog_derive/src/: lib.rs
clog_utils/: Cargo.toml
clog_utils/src/: main.rs
collector/: Cargo.toml
collector/src/: lib.rs
core/: Cargo.toml
core/benches/: log.rs
core/src/: collector.rs  filter.rs  grammar.lalrpop  lib.rs  shema.rs  slice.rs  types.rs  util.rs
core/tests/: decode.rs
viewer/: Makefile  build.js  demo.css  demo.html  main.tsx  tsconfig.json
ws_api/: Cargo.toml
ws_api/src/: lib.rs
ws_server/: Cargo.toml
ws_server/src/: lib.rs
