[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys = "*"
web-sys = { version = "*", features = ["WebSocket", "MessageEvent", "BinaryType", "console"] }
wasm-bindgen = "*"
postcard = "*"
clog_core = { path = "../core", features = ["encode"] }
clog_ws_api = { path = "../ws_api" }
serde = { version = "*", features = ["derive"] }
time = "*"
hexplay = "*"
itertools = "*"

[lib]
crate-type = ["cdylib", "rlib"]
