[package]
name = "clog_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chute = "*"
indexmap = "*"
soa-rs = "*"
pco = "*"
brotli = "*"
bytemuck = "*"
better_io = "*"
paste = "*"
istring = { version = "0.4.2", features = ["std", "serialize"] }
itertools = "*"
anyhow = "*"
serde = { version = "1", features = ["derive"] }
string-interner = "*"
bytes = "*"
postcard = { version = "*", features = ["use-std"] }
strum = { version = "*", features = ["derive"] }
regex = { version = "*" }
strsim = "*"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
time = { version = "*", features = ["wasm-bindgen"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.22.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gxhash = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rapidhash = "*"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "*"

[[bench]]
name = "log"
harness = false
