[package]
name = "clog_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["encode"]
encode = ["dep:brotli", "dep:http"]

[dependencies]
chute = "*"
indexmap = "*"
soa-rs = "*"
pco = "*"
brotli = { version = "*", default-features = false, features = ["std"], optional = true }
brotli-decompressor = { version = "*" }
bytemuck = "*"
better_io = "*"
paste = "*"
istring = { version = "0.4.2", features = ["std", "serialize"] }
itertools = "*"
anyhow = "*"
serde = { version = "1", features = ["derive"] }
string-interner = "*"
bytes = { version = "*", features = ["serde"] }
postcard = { version = "*", features = ["use-std"] }
strum = { version = "*", features = ["derive"] }
regex = { version = "*" }
strsim = "*"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
time = { version = "*", features = ["wasm-bindgen"] }
http = { version = "*", optional = true }
clog_derive = { path = "../clog_derive" }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.22.1"

[target.'cfg(all(target_feature="aes", target_feature="sse2"))'.dependencies]
gxhash = "*"

[target.'cfg(not(all(target_feature="aes", target_feature="sse2")))'.dependencies]
rapidhash = "*"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "*"

[[bench]]
name = "log"
harness = false
