[package]
name = "ws_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "*", features = ["ws", "macros"] }
clog_core = { path = "../core" }
clog_collector = { path = "../collector" }
clog_ws_api = { path = "../ws_api" }
serde_json = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
anyhow = "*"
tower-http = { version = "*", features = ["fs"] }
tower = { version = "0.4", features = ["util"] }
postcard = "*"
